dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/fluxcomp.cpp)

AC_PREREQ(2.52)

FLUXCOMP_MAJOR_VERSION=0
FLUXCOMP_MINOR_VERSION=1
FLUXCOMP_MICRO_VERSION=0
FLUXCOMP_INTERFACE_AGE=0
FLUXCOMP_BINARY_AGE=0
FLUXCOMP_VERSION=$FLUXCOMP_MAJOR_VERSION.$FLUXCOMP_MINOR_VERSION.$FLUXCOMP_MICRO_VERSION

AC_SUBST(FLUXCOMP_MAJOR_VERSION)
AC_SUBST(FLUXCOMP_MINOR_VERSION)
AC_SUBST(FLUXCOMP_MICRO_VERSION)
AC_SUBST(FLUXCOMP_INTERFACE_AGE)
AC_SUBST(FLUXCOMP_BINARY_AGE)
AC_SUBST(FLUXCOMP_VERSION)

AC_DEFINE_UNQUOTED(FLUXCOMP_VERSION,"$FLUXCOMP_VERSION",[The DirectFB version])

# libtool versioning
LT_RELEASE=$FLUXCOMP_MAJOR_VERSION.$FLUXCOMP_MINOR_VERSION
LT_CURRENT=`expr $FLUXCOMP_MICRO_VERSION - $FLUXCOMP_INTERFACE_AGE`
LT_REVISION=$FLUXCOMP_INTERFACE_AGE
LT_AGE=`expr $FLUXCOMP_BINARY_AGE - $FLUXCOMP_INTERFACE_AGE`

AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

# For automake.
VERSION=$FLUXCOMP_VERSION
PACKAGE=flux

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE
AC_DISABLE_STATIC
AM_PROG_LIBTOOL
AM_SANITY_CHECK
AC_ISC_POSIX
AM_PROG_CC_STDC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX

AC_OUTPUT([
Makefile
src/Makefile
])
