dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/fluxcomp.cpp)

AC_PREREQ(2.52)

FLUXCOMP_MAJOR_VERSION=1
FLUXCOMP_MINOR_VERSION=4
FLUXCOMP_MICRO_VERSION=4
FLUXCOMP_INTERFACE_AGE=0
FLUXCOMP_BINARY_AGE=0
FLUXCOMP_VERSION=$FLUXCOMP_MAJOR_VERSION.$FLUXCOMP_MINOR_VERSION.$FLUXCOMP_MICRO_VERSION

AC_SUBST(FLUXCOMP_MAJOR_VERSION)
AC_SUBST(FLUXCOMP_MINOR_VERSION)
AC_SUBST(FLUXCOMP_MICRO_VERSION)
AC_SUBST(FLUXCOMP_INTERFACE_AGE)
AC_SUBST(FLUXCOMP_BINARY_AGE)
AC_SUBST(FLUXCOMP_VERSION)

AC_DEFINE_UNQUOTED(FLUXCOMP_VERSION,"$FLUXCOMP_VERSION",[The fluxcomp version])
AC_DEFINE_UNQUOTED(FLUXCOMP_MAJOR_VERSION,$FLUXCOMP_MAJOR_VERSION,[The fluxcomp major version])
AC_DEFINE_UNQUOTED(FLUXCOMP_MINOR_VERSION,$FLUXCOMP_MINOR_VERSION,[The fluxcomp minor version])
AC_DEFINE_UNQUOTED(FLUXCOMP_MICRO_VERSION,$FLUXCOMP_MICRO_VERSION,[The fluxcomp micro version])

# libtool versioning
LT_RELEASE=$FLUXCOMP_MAJOR_VERSION.$FLUXCOMP_MINOR_VERSION
LT_CURRENT=`expr $FLUXCOMP_MICRO_VERSION - $FLUXCOMP_INTERFACE_AGE`
LT_REVISION=$FLUXCOMP_INTERFACE_AGE
LT_AGE=`expr $FLUXCOMP_BINARY_AGE - $FLUXCOMP_INTERFACE_AGE`

AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

# For automake.
VERSION=$FLUXCOMP_VERSION
PACKAGE=flux

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE
AC_DISABLE_STATIC
AM_PROG_LIBTOOL
AM_SANITY_CHECK
AC_ISC_POSIX
AM_PROG_CC_STDC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX

PKG_CHECK_MODULES([libdirect], [direct], [enable_libdirect="yes"], [enable_libdirect="no"
  AC_MSG_WARN([*** libdirect not found -- building without libdirect, debug output will be disabled])])

if test "$enable_libdirect" = "yes"; then
  AC_DEFINE(USE_LIBDIRECT,1,[Define to 1 if you are compiling with libdirect.])
fi

AC_OUTPUT([
Makefile
src/Makefile
])
